updated Kubernetes-Deployment-Steps.txt, backend-deployment.yaml, frontend-deployment.yaml,frontend/Dockerfile,frontend/public/index.html,frontend/src/App.js

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- This line is added to access it with public ip address -->
+     <script src="%PUBLIC_URL%/env-config.js"></script>
+
    
     
 
